--- a/Playbooks/Cisco/General/Cisco-ping.yml
+++ b/Playbooks/Cisco/General/Cisco-ping.yml
@@ -1,29 +1,56 @@
-- provider:
-    host: "192.168.146.131
-    username: "admin"
-    password: "password"
+---
+- debug: msg="START cli/ping.yaml"
 
-- name: Test reachability to 10.10.10.10 using default vrf
-  ios_ping:
-    provider: "{{ provider }}"
-    dest: 10.10.10.10
+- ios_command:
+    commands: show version
+    authorize: yes
+  register: show_version_result
 
-- name: Test reachability to 10.20.20.20 using prod vrf
-  ios_ping:
-    provider: "{{ provider }}"
-    dest: 10.20.20.20
-    vrf: prod
+- set_fact: management_interface=GigabitEthernet0/0
+  when: "'Cisco IOS' in show_version_result.stdout[0]"
 
-- name: Test unreachability to 10.30.30.30 using default vrf
-  ios_ping:
-    provider: "{{ provider }}"
-    dest: 10.30.30.30
-    state: absent
+- set_fact: management_interface=GigabitEthernet1
+  when: "'Cisco IOS-XE' in show_version_result.stdout[0]"
 
-- name: Test reachability to 10.40.40.40 using prod vrf and setting count and source
+- name: Get show ip management nterface output
+  ios_command:
+    commands:
+      - "show ip interface {{ management_interface }} | include Internet address"
+    authorize: yes
+  register: show_ip_interface_result
+
+- name: Extract the IP address from registered output
+  set_fact: management_ip="{{ show_ip_interface_result.stdout[0].split()[-1].split('/')[0] }}"
+
+- name: expected successful ping
+  ios_ping: &valid_ip
+    dest: '{{ management_ip }}'
+    authorize: yes
+  register: esp
+ 
+- name: unexpected unsuccessful ping
+  ios_ping: &invalid_ip
+    dest: '10.255.255.250'
+    timeout: 45
+    authorize: yes
+  register: uup
+  ignore_errors: yes
+
+- name: unexpected successful ping
   ios_ping:
-    provider: "{{ provider }}"
-    dest: 10.40.40.40
-    source: loopback0
-    vrf: prod
-    count: 20
+    <<: *valid_ip
+    state: 'absent'
+  register: usp
+  ignore_errors: yes
+
+- name: expected unsuccessful ping
+  ios_ping:
+    <<: *invalid_ip
+    state: 'absent'
+  register: eup
+
+- name: assert
+  assert:
+    that:
+    - esp.failed == eup.failed == false
+    - usp.failed == uup.failed == true
