--- a/Playbooks/Cisco/General/ping_nxos.yml
+++ b/Playbooks/Cisco/General/ping_nxos.yml
@@ -2,7 +2,7 @@
 
 - name: RUN 'SHOW VERSION'
     ios_command:
-      host: "{{ ansible_host}}"
+      host: all
       username: cisco
       password: cisco
       commands: show version
