--- a/Playbooks/Cisco/General/ping_nxos.yml
+++ b/Playbooks/Cisco/General/ping_nxos.yml
@@ -1,8 +1,18 @@
 ---
 
-- name: RUN 'SHOW VERSION'
-    ios_command:
-      host: all
-      username: cisco
-      password: cisco
-      commands: show version
+- name: ping testing
+  connection: local
+  gather_facts: yes
+
+  tasks:
+
+    # test reachability to 8.8.8.8 using mgmt vrf
+    - nxos_ping: dest=8.8.8.8 vrf=PRODUCTION host={{ inventory_hostname }}
+
+    # Test reachability to a few different public IPs using mgmt vrf
+    # if device has name lookups turned on, you can use names
+    - nxos_ping: dest={{ item }} vrf=PRODUCTION host={{ inventory_hostname }}
+      with_items:
+        - 8.8.8.8
+        - 4.4.4.4
+        - 198.6.1.4
